@@ -4,6 +4,6 @@ AUTOMAKE_OPTIONS = foreign
 
 SUBDIRS = src themes utils doc bg pix
 
-EXTRA_DIST = README ReleaseNotes ReleaseNotes.1 CVS-README ChangeLog autogen.sh Eterm.spec
+EXTRA_DIST = LICENSE README ReleaseNotes ReleaseNotes.1 CVS-README ChangeLog autogen.sh Eterm.spec
 MAINTAINERCLEANFILES = Makefile.in *~ aclocal.m4 config.guess config.sub configure depcomp \
     install-sh ltconfig ltmain.sh missing mkinstalldirs stamp-h* *.log config.h.in
