@@ -9,14 +9,14 @@ MMX_OBJS = mmx_cmod.lo
 SSE2_SRCS = sse2_cmod.c
 SSE2_OBJS = sse2_cmod.lo
 
-libEterm_la_SOURCES = actions.c actions.h buttons.c buttons.h command.c          \
-                      command.h draw.c draw.h e.c e.h eterm_debug.h eterm_utmp.h \
-                      events.c events.h feature.h font.c font.h grkelot.c        \
-                      grkelot.h icon.h menus.c menus.h misc.c misc.h netdisp.c   \
-                      options.c options.h pixmap.c pixmap.h profile.h screen.c   \
-                      screen.h script.c script.h scrollbar.c scrollbar.h         \
-                      startup.c startup.h system.c system.h term.c term.h        \
-                      timer.c timer.h utmp.c windows.c windows.h defaultfont.c   \
+libEterm_la_SOURCES = actions.c actions.h buttons.c buttons.h command.c			\
+                      command.h draw.c draw.h e.c e.h eterm_debug.h eterm_utmp.h	\
+                      events.c events.h feature.h font.c font.h grkelot.c		\
+                      grkelot.h icon.h menus.c menus.h misc.c misc.h			\
+                      options.c options.h pixmap.c pixmap.h profile.h screen.c		\
+                      screen.h script.c script.h scrollbar.c scrollbar.h		\
+                      startup.c startup.h system.c system.h term.c term.h		\
+                      timer.c timer.h utmp.c windows.c windows.h defaultfont.c		\
                       defaultfont.h libscream.c scream.h screamcfg.h
 
 EXTRA_libEterm_la_SOURCES = $(MMX_SRCS) $(SSE2_SRCS)
